fix horizontal spacing on landing page

--- a/src/app/pages/landing-page/landing-page.component.scss
+++ b/src/app/pages/landing-page/landing-page.component.scss
@@ -7,7 +7,7 @@
   background-size: cover;
 }
 .extra {
-  width: 420px;
+  max-width: 420px;
 }
 .div0 {
   background-image: url("/assets/landing/landing2.png");
